Created roles and admin user in Startup.cs, added controllers and Index views for Admin and Staff

--- a/WebScheduler/appsettings.json
+++ b/WebScheduler/appsettings.json
@@ -7,5 +7,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "AppSettings": {
+    "AdminEmail": "cameronperceful@gmail.com",
+    "Password": "Schedule123!",
+    "UserEmail": "cameronperceful@gmail.com",
+    "Username": "Admin"
+  } 
+
 }
