Remote validation preventing RequestOff duplication added

--- a/WebScheduler/appsettings.json
+++ b/WebScheduler/appsettings.json
@@ -12,7 +12,9 @@
     "AdminEmail": "cameronperceful@gmail.com",
     "Password": "Schedule123!",
     "UserEmail": "cameronperceful@gmail.com",
-    "Username": "Admin" 
+    "Username": "Admin",
+    "ClientValidationEnabled": true,
+    "UnobtrusiveJavaScriptEnabled": true
   } 
 
 }
