--- a/WebScheduler/appsettings.json
+++ b/WebScheduler/appsettings.json
@@ -9,9 +9,9 @@
     }
   },
   "AppSettings": {
-    "AdminEmail": "cameronperceful@gmail.com",
+    "AdminEmail": "admin@admin.com",
     "Password": "Schedule123!",
-    "UserEmail": "cameronperceful@gmail.com",
+    "UserEmail": "admin@admin.com",
     "Username": "Admin",
     "ClientValidationEnabled": true,
     "UnobtrusiveJavaScriptEnabled": true
